Change Log
=============
2011/09/26 (setup.py 1.0.3)
 - Added support to create test database

2011/03/30 (setup.py 1.0.2)
 - Added support for Django-1.3
 - Backward compatibility - Same codebase works with Django 1.0.x, 1.1.x, 1.2.x and 1.3.x
 - Fixed Unique column constraint having more than one NULL value
 - Fixed Unique columns together having more then one NULL value
 - Added date interval functionality
 - Fixed Boolean data type return for BooleanField/NullBooleanField

2010/09/01 (setup.py 1.0.1)
 - Fixed LIMIT constraint in select statement with column name alias
 - Fixed Unique column constraint with one NULL value
 - Fixed Unique columns together with one null value
 - Added Standard deviation, Variance function support (for population standard deviation and variance) 
 - Added MOD, BITAND and BITOR function support
 
2010/07/19 (setup.py 1.0)
 - Added IBM Dataservers backend support for Django 1.0.x and 1.1.x application Framework using Jython language
 - New files added
    -ibm_db_django/ibm_db_django/pybase.py
    -ibm_db_django/ibm_db_django/jybase.py
    
2010/04/28 (setup.py 0.2.1)
 - Allow database connection initialization at the begning of every connetion through Django's connection_created signals

2010/03/26 (setup.py 0.2.0)
 - Added support for Django-1.2
 - Backward compatibility - Same codebase works with Django 1.0.x, 1.1.x and 1.2
 - Exact look-up for LOB fields upto 4k Chars of data 
 - added tablespace_sql method in operations.DatabaseOperations
 - added compiler.py

2009/09/20 (setup.py 0.1.4)
 - ZOS support included
 - ibm_db google code issue no - 25 Implementation change for sequence_reset_sql
   in operations.py. 

2009/08/06 (setup.py 0.1.2)
 - Adaptor name changed - Value of DATABASE_ENGINE needs to be "ibm_db_django" because of namespace changes in ibm_db_django-0.1.2 
 - Backward compatibility - Same codebase works with both Django 1.0.x and 1.1
 - Added support for Multi-DB functionality in base.py, client.py